...
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            app:errorIconDrawable="@null"
                            android:layout_weight="1">

                            <EditText
                                android:id="@+id/firstName"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:focusable="true"
                                android:hint="@string/reg_firstname_hint"
                                android:imeOptions="actionNext"
                                android:inputType="textPersonName|textCapWords"
...
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:errorIconDrawable="@null"
                        android:layout_marginTop="4dp">

                        <EditText
                            android:id="@+id/surname"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:focusable="true"
                            android:hint="@string/reg_surname_hint"
                            android:imeOptions="actionNext"
                            android:inputType="textPersonName|textCapWords"
...
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/reg_ques_gender"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/gendererror"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:padding="2dp"
                        android:text="@string/choose_option_error"
                        android:textSize="@dimen/text_sm"
                        android:layout_marginStart="4dp"
...
                    <RadioGroup
                        android:id="@+id/gender"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <RadioButton
                            android:id="@+id/male"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/male"
                            android:tag="M"/>

                        <RadioButton
                            android:id="@+id/female"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/female"
                            android:tag="F"/>

                        <RadioButton
                            android:id="@+id/nonBinary"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/non_binary"
                            android:tag="N"/>

                    </RadioGroup>
...
                                android:focusable="true"
                                android:hint="@string/dob_hint"
                                android:imeOptions="flagNoExtractUi|actionNext"
                                android:inputType="datetime"
                                android:maxLength="10"
                                android:maxLines="1"
                                android:nextFocusDown="@+id/estimatedYear" />
                        </com.google.android.material.textfield.TextInputLayout>

                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_below="@id/textInputLayoutDOB"
...
                <LinearLayout
                    android:id="@+id/submitFrame"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <Button
                        android:id="@+id/submitButton"
                        style="@style/loginButtonStyle"
                        android:enabled="false"
                        android:layout_width="match_parent"
                        android:layout_height="60dp"
                        android:layout_marginVertical="14dp"
                        android:text="@string/action_submit" />
...
